# bourbon-price-cli

./: .gitignore  pyproject.toml
bourbon/: api.py  cli.py  lib.py
bourbon/data/: bourbon.csv
