[tool.poetry]
name = "bourbon"
version = "0.1.0"
description = ""
authors = ["Dylan Schlager <mail@dylanschlager.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.0.3"
tabulate = "^0.9.0"
fastapi = {extras = ["all"], version = "^0.103.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bourbon = "bourbon.cli:cli"
